Fix sidebar/content overlap at intermediate widths
- Set sidebar to fixed 200px width instead of span(2/12) which was too
  narrow for the 175px avatar image
- Replace Susy grid span(10/12) with calc(100% - 220px) for content area
  to always clear the sidebar properly

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -18,9 +18,9 @@
 
 .page {
   @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    float: right;
+    width: calc(100% - 220px);
+    padding-left: 1rem;
   }
 
   .page__inner-wrap {
@@ -385,7 +385,7 @@
   float: left;
 
   @include breakpoint($large) {
-    @include pre(2.5 of 12);
+    margin-left: 220px;
   }
 
   a {
